デモ内の「ダイアログ」を「モーダルダイアログ」「モードレスダイアログ」に修正

--- a/1/index.html
+++ b/1/index.html
@@ -10,9 +10,9 @@
 
 
 <dialog>
-  <p>これはダイアログです</p>
+  <p>これはモードレスダイアログです</p>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モードレスダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
