--- a/2/index.html
+++ b/2/index.html
@@ -10,10 +10,10 @@
 
 
 <dialog>
-  <p>これはダイアログです</p>
-  <button id="close">ダイアログを閉じる</button>
+  <p>これはモードレスダイアログです</p>
+  <button id="close">モードレスダイアログを閉じる</button>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モードレスダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
