--- a/6/index.html
+++ b/6/index.html
@@ -10,7 +10,7 @@
 
 
 <dialog>
-  <p>これはダイアログです</p>
+  <p>これはモーダルダイアログです</p>
   <div>
     <input type="text" id="input_value" value="" placeholder="何かしら入力してください">
   </div>
@@ -18,7 +18,7 @@
     <button id="close">閉じて、入力した内容をalertする</button>
   </div>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モーダルダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
