--- a/5/index.html
+++ b/5/index.html
@@ -10,10 +10,10 @@
 
 
 <dialog>
-  <p>これはダイアログです</p>
-  <button id="close">ダイアログを閉じる</button>
+  <p>これはモーダルダイアログです</p>
+  <button id="close">モーダルダイアログを閉じる</button>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モーダルダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
