--- a/7/index.html
+++ b/7/index.html
@@ -11,12 +11,12 @@
 
 <dialog>
   <form method="dialog">
-    <p>これはダイアログです。本当によろしいですか？</p>
+    <p>これはモーダルダイアログです。本当によろしいですか？</p>
     <button type="submit" value="yes">はい</button>
     <button type="submit" value="no" autofocus>いいえ</button>
   </form>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モーダルダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
