--- a/8/index.html
+++ b/8/index.html
@@ -27,10 +27,10 @@ dialog {
 
 
 <dialog>
-  <p>これはダイアログです。</p>
-  <button id="close">ダイアログを閉じる</button>
+  <p>これはモーダルダイアログです。</p>
+  <button id="close">モーダルダイアログを閉じる</button>
 </dialog>
-<button id="show">ダイアログを開く</button>
+<button id="show">モーダルダイアログを開く</button>
 
 <script>
 var dialog = document.querySelector('dialog');
