--- a/8/index.html
+++ b/8/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width">
 <title>dialog要素</title>
 <style>
+.mod-p { color: #ccc; }
+.mod-p > a { color: #7e7eed; }
+</style>
+<style>
 dialog {
   position: absolute;
   z-index: 1;
@@ -32,12 +36,22 @@ dialog {
 </dialog>
 <button id="show">モーダルダイアログを開く</button>
 
+<p class="mod-p">
+The quick brown fox jumps over the lazy dog. <a href="#">The quick brown fox jumps over the lazy dog.</a> The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. 
+</p>
+
+<p class="mod-p">
+The quick brown fox jumps over the lazy dog. <a href="#">The quick brown fox jumps over the lazy dog.</a> The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. 
+</p>
+
 <script>
 var dialog = document.querySelector('dialog');
-document.querySelector('#show').addEventListener('click', function() {
+var btn_show = document.getElementById('show');
+var btn_close = document.getElementById('close');
+btn_show.addEventListener('click', function() {
   dialog.showModal();
 }, false);
-document.querySelector('#close').addEventListener('click', function() {
+btn_close.addEventListener('click', function() {
   dialog.close();
 }, false);
 </script>
